# codereview-agent

./: .codereview.yml  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: code_review.yml  docker-publish.yml
src/: CONTRIBUTING.md  Greeter.cs  app_config.py  user_validator.py
src/code_review_agent/: bitbucket_client copy.py  bitbucket_client.py  cli.py  context_builder.py  context_builder2.py  git_utils.py  github_client.py  jira_client.py  llm_client.py  models.py  relevance_assessor.py  reviewer copy 2.py  reviewer copy.py  reviewer.py  summarizer.py
src/tests/: test_cli.py  test_git_utils.py  test_jira_ai_comment.py  test_llm_client.py  test_reviewer.py  test_summarizer.py
src/workflows/: code_review.yml
workflows/: code_review.yml
